--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -13,10 +13,10 @@
               <div class="col-lg-12">
                   <div class="media">
                     
-                      <a class="pull-left" href="#">
-                          <img id="ameyy" class="media-object dp img-circle" src="/static/image/scottish-terrier-watercolor-irina-march.jpg" 
+                      <div class="pull-left" >
+                          <img id="ameyy" class="media-object dp img-circle" src="/moneyclub/groups/get_photo_group/{{group.id}}/" 
                           style="width: 100px;height:100px;">
-                      </a>
+                      </div>
 
                     
                       <div class="media-body">
@@ -74,12 +74,13 @@
                                   <div class="row">
               
                                                 
-                                      <form accept-charset="UTF-8" action="/moneyclub/groups/post_article/{{group.id}}" method="POST" id="post-article"  enctype="multipart/form-data">
+                                      <form accept-charset="UTF-8" action="/moneyclub/groups/post_article/{{group.id}}/" method="POST" id="post-article"  enctype="multipart/form-data">
                                         
                                         <input type="text" class="form-control" placeholder="Title of the article" name="title">
                                       
                                       
-                                          <textarea class="form-control counted" name="description" placeholder="Describe the article." rows="10" style="margin-top:10px; margin-bottom:10px;resize: none"></textarea>
+                                          <textarea class="form-control counted" name="description" placeholder="Describe the article." 
+                                          rows="10" style="margin-top:10px; margin-bottom:10px;resize: none"></textarea>
                                           <div class="input-group ">
                                       
                                             <span class="input-group-addon "><span class="glyphicon glyphicon-link"></span></span>
