--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -1,6 +1,6 @@
 {% extends "moneyclub/index.html"%}
   {% block title%}
-    <title>{{group_name}}</title>
+    <title>{{group.name}}</title>
   {% endblock title%}
 
           {% block nav_settings %}
@@ -11,7 +11,10 @@
                   <li><a href="#">Another action</a></li>
                   <li><a href="#">Something else here</a></li>
                   <li class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
+                  <li class="dropdown-header"> Group Settings </li>
+                    <li><a href="{% url 'group_settings' group.id %}">Edit Group Profile</a></li>
+
+                  </li>
                  
                   <li><a href="#">One more separated link</a></li>
                 </ul>
