--- a/moneyclub/templates/moneyclub/index.html
+++ b/moneyclub/templates/moneyclub/index.html
@@ -32,7 +32,7 @@
               <div class="col-lg-12">
                   <div class="media">
                       <a class="pull-left" href="#">
-                          <img class="media-object dp img-circle" src="{% url 'user-photo' user.id%}" style="width: 100px;height:100px;">
+                          <img class="media-object dp img-circle" src="/moneyclub/member/userphoto/{{user.id}}" style="width: 100px;height:100px;">
                       </a>
                     <div class="media-body">
                         <h4 class="media-heading">{{user}} <small> USA/Scotland</small></h4>
@@ -107,7 +107,7 @@
         
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="siderbars" role="navigation">
           {% block sidebars %}
-          <div class="well sidebar-nav" id="stock">
+          <div class="well sidebar-nav stock" id="{{user.id}}">
             <ul class="nav">
              
               <table class="table table-striped table-condensed">
