--- a/moneyclub/templates/moneyclub/article.html
+++ b/moneyclub/templates/moneyclub/article.html
@@ -9,7 +9,7 @@
     <!-- Custom styles for this template -->
     <link href="/static/css/offcanvas.css" rel="stylesheet">
     <script src="/static/js/jquery-1.10.2.min.js"></script>
-  
+    <script src="/static/js/vote.js"></script>
   {% endblock headblock %}
   
 
@@ -88,8 +88,8 @@
          
             <div class="btn-sm-group" id="{{article.id}}">
               
-              <button  id="upvote" type="button" class="btn btn-success glyphicon glyphicon-thumbs-up">({{article.upvotes|length}})</button>
-              <button  id="downvote" type="button"class="btn btn-danger glyphicon glyphicon-thumbs-down">({{article.downvotes|length}})</button>
+              <button  id="upvote" type="button" class="btn btn-success glyphicon glyphicon-thumbs-up">{{article.article_upvote|length}}</button>
+              <button  id="downvote" type="button"class="btn btn-danger glyphicon glyphicon-thumbs-down">{{article.article_downvote|length}}</button>
 
            
             </div>
