--- a/moneyclub/templates/moneyclub/view_group_members2.html
+++ b/moneyclub/templates/moneyclub/view_group_members2.html
@@ -36,7 +36,7 @@
                     <td>{{item.user}}</td>
                     <td>{{item.points}}</td>
                     <td>
-                       <div class="btn-success">
+                       <div class="btn btn-block btn-success">
                        <span class="glyphicon glyphicon-ok-circle"></span> Active Member</div>          
                     </td>
                     <td>
@@ -50,7 +50,7 @@
                     <td>{{item.points}}</td>
                     <td>
                     
-                    <div class=" btn-primary btn-danger">
+                    <div class="btn btn-block btn-primary btn-danger">
                     <span class="glyphicon glyphicon-remove-sign"></span> Blocked Member</div>
                     </td>
                     <td>
