update to gitignore. Merge process with Erzhuo complete

--- a/moneyclub/templates/moneyclub/view_group_members2.html
+++ b/moneyclub/templates/moneyclub/view_group_members2.html
@@ -23,8 +23,8 @@
             <div class="alert alert-success" style="display:none;">
                 </div>
             <table class="table">
-                <thead>
-                    <tr><th>Member</th><th>Points</th><th>Status</th><th>Action</th></tr>
+                <thead align="center">
+                    <tr align="center"><th>Member</th><th>Points</th><th>Status</th><th>Actions Available</th></tr>
                 </thead>
                 <tbody>
 
