post article with ajax

--- a/moneyclub/templates/moneyclub/article.html
+++ b/moneyclub/templates/moneyclub/article.html
@@ -2,7 +2,7 @@
 
 {% block headblock %}
     {% block title %}
-    <title>Article: {{article.title.value}}</title>
+    <title>Article: {{article.title}}</title>
     {% endblock title %}
        <link href="/static/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -19,28 +19,19 @@
       <div class="row ">
         <div class="col-lg-8">
           <div class="article">
-            <h1>{{article.title.value}}</h1>
-            <p class="lead">by <a href="/moneyclub/users/{{user}}/">{{user}}</a></p>
-            <p class="lead">Desccription: <br/> <a href="/moneyclub/users/{{user}}/">{{article.description}}</a></p>
+            <h1>{{article.title}}</h1>
+            <p class="lead">by <a href="/moneyclub/users/{{user}}/">{{article.user}}</a></p>
+            
             <hr>
             
             <p><span class="glyphicon glyphicon-time"></span> Post at {{article.datetime}}</p>
             
-            <img src="/moneyclub/groups/get_photo_article/{{article.id}}"/>
-            
-            
-            <!--
-            {% for field in article.visible_fields %}
-            {{field.label_tag}}: 
-            {{field}}
-            <p style="color:red;"> {{field.errors}} </p>
-            {% endfor %}
-          -->
-            {% if  articleType == 1 %}
+
+            {% if  article.articleType == 1 %}
             {% if article.picture %}
               <img class="media-object" src="{% url 'post-photo' article.id %}" alt="..."width="400px">
             {% endif %}
-            <p class="lead">{{article.content.value}}</p>
+            <p class="lead">{{article.content}}</p>
 
             {% endif %}
             
