--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -11,6 +11,8 @@
     <script src="/static/js/jquery-1.10.2.min.js"></script>
     <script src="/static/js/group_stock.js"></script>
     <script src="/static/js/edit_group_stock.js"></script>
+    <script src="/static/js/post.js"></script>
+    <script src="/static/js/jquery.form.js"type="text/javascript" ></script>
   {% endblock headblock %}
 
 
@@ -85,17 +87,17 @@
                                   <div class="row">
               
                                                 
-                                      <form accept-charset="UTF-8" action="/moneyclub/groups/post_article/{{group.id}}/" method="POST" id="post-article"  enctype="multipart/form-data">
-                                        
+                                      <form accept-charset="UTF-8" action="/moneyclub/groups/post_article" method="POST" id="post-article"  enctype="multipart/form-data">
+                                        <input type="hidden" name="group_id" value="{{group.id}}">
                                         <input type="text" class="form-control" placeholder="Title of the article" name="title">
                                       
-                                      <input type="text" id="article type" name="article_type" value=1 hidden ></input>
-                                          <textarea class="form-control counted" name="description" placeholder="Describe the article." 
+                                      <input type="text" id="article type" name="article_type" value="1" hidden ></input>
+                                          <textarea class="form-control counted" name="content" placeholder="Describe the article." 
                                           rows="10" style="margin-top:10px; margin-bottom:10px;resize: none"></textarea>
                                           <div class="input-group ">
                                       
                                             <span class="input-group-addon "><span class="glyphicon glyphicon-link"></span></span>
-                                            <input type="text" name="content" class="form-control" placeholder="External URL of the article">
+                                            <input type="text" name="picture_url" class="form-control" placeholder="External URL of the article">
                                           </div>
                                   
                                      <p> Upload image for the article</p>
@@ -103,7 +105,7 @@
                                                                      
                                      
                                           <div class="modal-footer">
-                                            <button class="btn btn-info" type="submit">Post New Article</button>
+                                            <button class="btn btn-info post-article" id="{{group.id}}" type="submit">Post New Article</button>
                                           </div>
 
                                         {%csrf_token%}
@@ -132,7 +134,7 @@
                                               <div class="form-group">
                                               <label for="dtp_input2" class="col-md-3 control-label">Date </label>
                                                 <div class="input-group date form_date col-md-7" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
-                                                    <input class="form-control" size="16" type="text" value="" readonly name="eventdatetime">
+                                                    <input class="form-control" size="16" type="text" value="" readonly name="eventDate">
                                                     
                                                       <span class="input-group-addon">
                                                         <span class="glyphicon glyphicon-calendar"></span>
@@ -143,7 +145,7 @@
                                             <div class="form-group">
                                                 <label for="dtp_input3" class="col-md-3 control-label">Time </label>
                                                 <div class="input-group date form_time col-md-7" data-date="" data-date-format="hh:ii" data-link-field="dtp_input3" data-link-format="hh:ii">
-                                                    <input class="form-control" size="16" type="text" value="" readonly name="eventdatetime2">
+                                                    <input class="form-control" size="16" type="text" value="" readonly name="eventTime">
                                                     
                                                     <span class="input-group-addon">
                                                       <span class="glyphicon glyphicon-time"></span>
@@ -153,7 +155,7 @@
                                             <div class="form-group">
                                                 <label for="loc_input" class="col-md-3 control-label">Location </label>
                                                 <div class="input-group  col-md-7" >
-                                                    <input class="form-control" size="16" type="text" value="" >
+                                                    <input class="form-control" size="16" type="text" name="location" value="" >
                                                     
                                                     
                                                 </div>
@@ -167,7 +169,7 @@
                                             </div> <!--/.form-group -->
                                             
                                            <div class="modal-footer">
-                                                <button class="btn btn-info" type="submit">Start Event</button>
+                                                <button class="btn btn-info start-event" id="{{group.id}}" type="submit">Start Event</button>
                                           </div>
                                              {%csrf_token%}
                                             </form>
