--- a/moneyclub/static/css/profile.css
+++ b/moneyclub/static/css/profile.css
@@ -1,17 +1,21 @@
 /* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 70px;
+}
+footer {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
+/*
 .header,
 .marketing,
 .footer {
   padding-left: 15px;
   padding-right: 15px;
 }
-
+*/
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
@@ -52,14 +56,6 @@ body {
 }
 
 /* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
 
 /* Main marketing message and sign up button */
 .jumbotron {
