--- a/moneyclub/templates/moneyclub/profile.html
+++ b/moneyclub/templates/moneyclub/profile.html
@@ -16,7 +16,7 @@
     {% block contentsblock %}
     <div class="container">
     	<div class="row row-offcanvas row-offcanvas-right">
-    		<div class="col-md-12  ">
+    		<div class="col-md-8 col-md-offset-2  ">
          {% block jumbotron%}
           <div class="jumbotron">
             <div class="row">
