--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -34,9 +34,7 @@
             <li><a href="/moneyclub/member/profile">Profile</a></li>
           </ul>
           <ul  class="nav navbar-nav navbar-right">
-             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span 
-                    class="glyphicon glyphicon-globe" style="font-size:150%"></span> <span class="label label-warning">{{requests|length}}</span>
-                </a>
+             <li class="dropdown">
                     <ul class="dropdown-menu">
                       {% for request in requests %}
                         <li id="{{request.id}}"><a href="#">
