--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -347,7 +347,7 @@
           </div><!--/.well -->
           <div class="well sidebar-nav">
             <ul class="nav">
-              <li><h4><a href="{% url 'member_management' group.id%}">Members</a></h4></li>
+              <li><h4><a href="/moneyclub/groups/member-management/1/">Members</a></h4></li>
               {%for member in members%}
               <li class="active"><a href="#"><span class="glyphicon glyphicon-user" style="color:green"></span>{{member.user.username}}</a></li>
               {%endfor%}
