--- a/moneyclub/templates/moneyclub/index.html
+++ b/moneyclub/templates/moneyclub/index.html
@@ -114,7 +114,7 @@
                     src="/moneyclub/groups/get_photo_article/{{article.id}}" 
                     
                     
-                    alt="Image Not Found!"width="100px">
+                    alt="Image Not Found!" width="100px">
                   </a>
                
                
@@ -122,7 +122,7 @@
                
                
                 <div class="media-body">
-                  <h4 class="media-heading">Title: <a href="/moneyclub/groups/article/{{article.groupId.id}}">{{article.title}}</a></h4>
+                  <h4 class="media-heading">Title: <a href="/moneyclub/groups/article/{{article.id}}">{{article.title}}</a></h4>
                   <span class="label label-info">Article description:</span>
                   
                   <br/>
